fix(triggers): rename Scope to Local/Global + add FOLLOW badge
- Column header renamed from 'Scope' to 'Local/Global' for clarity
- New amber FOLLOW badge appears in the Answer column when a trigger
  card has follow-up question text (consent gate active)

Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -261,6 +261,11 @@
       color: #ffffff;
     }
     
+    .answer-badge.follow {
+      background: #f59e0b;
+      color: #ffffff;
+    }
+    
     /* ════════════════════════════════════════════════════════════════════════
        RESPONSE MODE TOGGLE
        ════════════════════════════════════════════════════════════════════════ */
@@ -978,7 +983,7 @@
             <div>Keywords</div>
             <div>Answer</div>
             <div>Follow-up</div>
-            <div>Scope</div>
+            <div>Local/Global</div>
             <div>On/Off</div>
             <div>Actions</div>
           </div>
