nuke(control-plane-v2): complete elimination — zero trace
DELETED (27 files):
- public/control-plane-v2.html (the legacy beast)
- public/js/control-plane-v2-navigator.js
- public/js/ai-agent-settings/ (23 files — Agent2Manager, AIAgentSettings,
  VoiceCoreTab, TwilioControlCenter, SpamFilter, LLM0Controls, STTSettings,
  CallFlowEngine, TriageCommandCenter, AITestConsole, QuickAnswers,
  AiCoreTemplates, AiCoreLiveScenarios, AiCoreFillerFilter, Enterprise*,
  Filler, Synonym, Suggestion, Variables, FrontlineScript, SystemDiagnostics)
- routes/controlPlane/ (3 files — registry.js, effective.js, bookingLogic.js)

UPDATED (10 files):
- index.js: removed 3 route imports + 3 app.use registrations
- company-profile.html: removed 8 legacy script imports, redirected links
- scenario-gaps.html: redirected to Agent Console
- call-center.html: redirected to Agent Console
- black-box.html: redirected 4 nav links to Agent Console
- company-access.html: redirected demo + docs links
- admin-data-center.html: redirected 2 links
- add-company.html: post-create redirect to Agent Console
- frontline-intel-editor.html: removed dead script import
- admin-global-instant-responses.html: removed 6 dead script imports
- notification-center/LogManager.js: redirected to Agent Console
- v2metrics.js: zeroed deleted file line counts

VERIFIED:
- Zero Agent Console dependencies on deleted code
- Zero runtime (v2twilio.js) dependencies on deleted code
- Zero remaining references to control-plane-v2.html in any .js or .html
- Bridge settings already migrated to Agent Console (previous commit)
- All navigation links redirect to Agent Console equivalent pages

Made-with: Cursor

--- a/public/add-company.html
+++ b/public/add-company.html
@@ -429,7 +429,7 @@
 
                 setTimeout(() => {
                     // Legacy UI nuked (Jan 2026) — route new companies into the Truth UI.
-                    window.location.href = `/control-plane-v2.html?companyId=${result._id}`;
+                    window.location.href = `/agent-console/agent2.html?companyId=${result._id}`;
                 }, 2000);
 
             } catch (error) {
