--- a/public/call-center.html
+++ b/public/call-center.html
@@ -2249,7 +2249,7 @@
         function goBackToControlPlane() {
             const urlParams = new URLSearchParams(window.location.search);
             const companyId = urlParams.get('companyId');
-            const controlPlaneUrl = `/control-plane-v2.html?companyId=${companyId}`;
+            const controlPlaneUrl = `/agent-console/agent2.html?companyId=${companyId}`;
             window.location.href = controlPlaneUrl;
         }
         
