--- a/public/frontline-intel-editor.html
+++ b/public/frontline-intel-editor.html
@@ -671,7 +671,7 @@ CUSTOMIZATION NOTES
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Script Builder UI -->
-    <script src="/js/ai-agent-settings/FrontlineScriptBuilder.js"></script>
+    <!-- FrontlineScriptBuilder.js NUKED with control-plane-v2 Feb 2026 -->
     <script>
         // Initialize Script Builder after page loads
         document.addEventListener('DOMContentLoaded', () => {
