--- a/public/company-profile.html
+++ b/public/company-profile.html
@@ -517,7 +517,7 @@
                                                     <p class="text-xs text-slate-500">
                                                         <i class="fas fa-info-circle text-blue-400 mr-1"></i>
                                                         <strong>Why hidden?</strong> These integrations exist in the database but aren't yet connected to the 
-                                                        <a href="/control-plane-v2.html?tab=agent-wiring" class="text-blue-600 hover:underline">Agent Wiring (AW)</a> 
+                                                        <span class="text-blue-600">Agent Console</span> 
                                                         registry. Once CONFIG_READ traces are implemented, they'll appear here with full diagnostic support.
                                                     </p>
                                                 </div>
@@ -1969,15 +1969,7 @@
                                 </div>
                                 
                         <!-- Load AI Agent Settings Managers (Customer-Facing Only) -->
-                        <script src="/js/ai-agent-settings/AIAgentSettingsManager.js?v=5.3"></script>
-                        <script src="/js/ai-agent-settings/SystemDiagnostics.js?v=1.0"></script>
-                        <script src="/js/ai-agent-settings/VoiceCoreTabManager.js?v=7.0"></script>
-                        <script src="/js/ai-agent-settings/TwilioControlCenter.js?v=5.0"></script>
-                        <!-- NUKED: ConnectionMessagesManager.js - Agent 2.0 owns greetings now -->
-                        <script src="/js/ai-agent-settings/SpamFilterManager.js?v=1.0"></script>
-                        <script src="/js/ai-agent-settings/LLM0ControlsManager.js?v=1.0"></script>
-                        <!-- V2 Navigator - for diagnostic "Fix Now" buttons -->
-                        <script src="/js/control-plane-v2-navigator.js?v=1.0"></script>
+                        <!-- Legacy ai-agent-settings + control-plane-v2 NUKED Feb 2026. Use Agent Console. -->
                         
                         <!-- Load Voice Settings Manager -->
                         <script src="/js/ai-voice-settings/VoiceSettingsManager.js?v=1.0"></script>
@@ -3676,7 +3668,7 @@
             if (event) event.preventDefault();
             const companyId = window.currentCompanyId || window.companyId || localStorage.getItem('currentCompanyId');
             if (companyId) {
-                window.location.href = `/control-plane-v2.html?companyId=${companyId}`;
+                window.location.href = `/agent-console/agent2.html?companyId=${companyId}`;
             } else {
                 alert('No company selected. Please select a company first.');
             }
