--- a/public/agent-console/index.html
+++ b/public/agent-console/index.html
@@ -96,6 +96,25 @@
           </div>
 
         <!-- ───────────────────────────────────────────────────────────
+             CARD: Call Center — Operations
+             ─────────────────────────────────────────────────────────── -->
+          <div class="card nav-card" data-navigate="callcenter">
+            <div class="nav-card-icon">
+              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72c.127.96.361 1.903.7 2.81a2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0122 16.92z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <h3 class="nav-card-title">Call Center</h3>
+            <p class="nav-card-description">Manage calls, customers, vendors, and calendar. Review pending calls, track appointments, and search all records.</p>
+            <div class="nav-card-action">
+              Open
+              <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+
+        <!-- ───────────────────────────────────────────────────────────
              CARD: Agent 2.0 — Discovery
              ─────────────────────────────────────────────────────────── -->
           <div class="card nav-card" data-navigate="agent2">
