nuke(round4): dead pages — black-box, black-box-detail, frontline-intel-editor
Deleted:
- public/black-box.html — legacy call viewer, no links to it
- public/black-box-detail.html — legacy detail viewer, orphaned
- public/frontline-intel-editor.html — orphaned, zero links from any page

Updated:
- call-center.html — removed onclick to deleted black-box-detail
- scenario-gaps.html — removed onclick to deleted black-box-detail

BlackBox/CallLogger system remains as no-op stubs (13+41 lines) to
prevent runtime crashes from legacy imports. The stubs do nothing.

Made-with: Cursor

--- a/public/call-center.html
+++ b/public/call-center.html
@@ -4328,7 +4328,7 @@
             document.getElementById('intel-calls-count').textContent = `${calls.length} calls`;
             if (calls.length > 0) {
                 document.getElementById('intel-calls-list').innerHTML = calls.map(call => `
-                    <div style="background: var(--bg-secondary); padding: 12px; border-radius: 8px; margin-bottom: 8px; cursor: pointer;" onclick="${call.blackBoxId ? `window.open('/black-box-detail.html?recordingId=${call.blackBoxId}', '_blank')` : ''}">
+                    <div style="background: var(--bg-secondary); padding: 12px; border-radius: 8px; margin-bottom: 8px;">
                         <div style="display: flex; justify-content: space-between; align-items: center;">
                             <div style="font-weight: 500; color: var(--text-primary);">
                                 📞 ${call.date ? new Date(call.date).toLocaleString() : 'Unknown'}
