fix(spam-filter): restore spam tab renderer without AI settings
Reintroduce only the SpamFilterManager frontend module and its page include so the Spam Filter tab content renders again after the nuke cleanup. Keep legacy AI Agent Settings modules removed while restoring spam operations UI.

Made-with: Cursor

--- a/public/company-profile.html
+++ b/public/company-profile.html
@@ -3473,6 +3473,9 @@
         window.saveManualGreeting = saveManualGreeting;
     </script>
     
+    <!-- Spam Filter manager (required by spam tab lazy init) -->
+    <script src="/js/ai-agent-settings/SpamFilterManager.js?v=2.22"></script>
+
     <!-- Load Company Profile Modern JavaScript -->
     <script src="/js/company-profile-modern.js?v=2.21"></script>
     
