--- a/public/agent-console/callconsole.html
+++ b/public/agent-console/callconsole.html
@@ -901,6 +901,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/lib/agent2PathNamespace.js"></script>
   <script src="/agent-console/callconsole.js"></script>
 </body>
 </html>
