--- a/public/agent-console/index.html
+++ b/public/agent-console/index.html
@@ -115,6 +115,28 @@
           </div>
 
         <!-- ───────────────────────────────────────────────────────────
+             CARD: Flow Map Workspace
+             ─────────────────────────────────────────────────────────── -->
+          <div class="card nav-card" data-navigate="flow-map">
+            <div class="nav-card-icon">
+              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="2.5" stroke="currentColor" stroke-width="2"/>
+                <circle cx="18" cy="6" r="2.5" stroke="currentColor" stroke-width="2"/>
+                <circle cx="12" cy="18" r="2.5" stroke="currentColor" stroke-width="2"/>
+                <path d="M8.3 7.2L15.7 7.2M7.4 8.3L10.7 15.2M16.6 8.3L13.3 15.2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </div>
+            <h3 class="nav-card-title">Flow Map Workspace</h3>
+            <p class="nav-card-description">Create draggable bubble notes to map runtime steps, sequence, and risk points. Local-only planning board, not wired to production logic.</p>
+            <div class="nav-card-action">
+              Open
+              <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+
+        <!-- ───────────────────────────────────────────────────────────
              CARD: Agent 2.0 — Discovery
              ─────────────────────────────────────────────────────────── -->
           <div class="card nav-card" data-navigate="agent2">
