feat(flow-map): add arrow connections between bubbles
Added interactive arrow connection system to visualize flow between steps:

Features:
- Click → button on any bubble to start connection mode
- Click target bubble to create arrow connection
- SVG arrows with arrowheads render between connected bubbles
- Arrows update in real-time when dragging bubbles
- Click arrows to delete connections
- Connections persist in localStorage with notes
- Export/import includes connections
- Visual feedback: source bubble highlights green in connect mode

UI enhancements:
- Added → button to bubble controls
- Green glow for connection source bubble
- Curved SVG paths with arrowhead markers
- Clickable arrows for deletion

Storage:
- Connections saved in localStorage as {from: noteId, to: noteId}
- Included in JSON export/import
- Cleared with "Clear All" action

Made-with: Cursor

--- a/public/agent-console/flow-map.html
+++ b/public/agent-console/flow-map.html
@@ -47,7 +47,9 @@
       user-select: none;
     }
     .map-note.active { border-color: #3b82f6; box-shadow: 0 0 0 2px rgba(59,130,246,0.2), 0 8px 18px rgba(15, 23, 42, 0.16); }
+    .map-note.connect-source { border-color: #10b981; box-shadow: 0 0 0 2px rgba(16,185,129,0.3), 0 8px 18px rgba(15, 23, 42, 0.16); }
     .map-note-header { display: flex; align-items: center; justify-content: space-between; gap: 8px; background: #eff6ff; border-bottom: 1px solid #dbeafe; border-radius: 12px 12px 0 0; padding: 8px 10px; cursor: move; }
+    .connect-source .map-note-header { background: #d1fae5; border-bottom-color: #a7f3d0; }
     .map-note-title { margin: 0; font-size: 13px; font-weight: 700; color: #1e3a8a; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
     .map-note-body { padding: 10px; font-size: 13px; color: #334155; white-space: pre-wrap; max-height: 180px; overflow: auto; }
     .map-note-footer { display: flex; justify-content: space-between; align-items: center; gap: 8px; padding: 8px 10px 10px; }
