feat(flow-map): add zoom in/out controls
Added zoom functionality with buttons and keyboard shortcuts:

Features:
- Zoom In (+) button - increase zoom by 10%
- Zoom Out (−) button - decrease zoom by 10%
- Reset (100%) button - shows current zoom level, click to reset
- Ctrl+Scroll (or Cmd+Scroll on Mac) to zoom
- Zoom range: 25% to 200%

UI:
- Three new buttons in left panel above Export/Import
- Zoom level displays dynamically on reset button
- Tooltips show keyboard shortcuts

Technical:
- CSS transform scale on board element
- Transform origin at top-left (0,0)
- Zoom state persists during session
- Smooth scaling of entire canvas

UX benefits:
- Zoom out to see big picture
- Zoom in for detailed editing
- Keyboard shortcut for power users

Made-with: Cursor

--- a/public/agent-console/flow-map.html
+++ b/public/agent-console/flow-map.html
@@ -99,6 +99,11 @@
           </div>
           <div class="map-panel-body">
             <div class="map-actions" style="margin-bottom: 10px;">
+              <button class="btn btn-sm" id="btn-zoom-out" title="Zoom Out (Ctrl + Scroll Down)">−</button>
+              <button class="btn btn-sm" id="btn-zoom-reset" title="Reset Zoom">100%</button>
+              <button class="btn btn-sm" id="btn-zoom-in" title="Zoom In (Ctrl + Scroll Up)">+</button>
+            </div>
+            <div class="map-actions" style="margin-bottom: 10px;">
               <button class="btn btn-sm" id="btn-export-map">Export JSON</button>
               <button class="btn btn-sm" id="btn-import-map">Import JSON</button>
               <input type="file" id="input-import-map" accept="application/json" style="display:none;">
