feat(scrabengine): build enterprise-grade text processing pipeline
SCRABENGINE - Unified text normalization & token expansion system

ARCHITECTURE:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Stage 1: Filler Removal     → Remove "um", "uh", "you know"
Stage 2: Vocabulary Norm     → Fix "acee" → "ac", "pulling" → "cooling"
Stage 3: Token Expansion     → Add synonyms as metadata (never replace)
Stage 4: Quality Gate        → Filter garbage, ensure minimum quality
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

CRITICAL GUARANTEES:
✓ rawText NEVER mutated (immutable ground truth)
✓ All transformations logged (full audit trail)
✓ Expansion adds tokens, never replaces (metadata only)
✓ Idempotent (same input + config = same output)
✓ Fast (< 30ms target for 99% of inputs)

NEW FILES:
─────────────────────────────────────────────────────────────
Backend:
- services/ScrabEngine.js (550 lines)
  Enterprise text processor with 3-stage pipeline

- routes/agentConsole/scrabEngine.js (150 lines)
  API routes: GET/POST config, POST test endpoint

Frontend:
- public/agent-console/scrabengine.html (290 lines)
  World-class UI with 3 modals + live testing panel

- public/agent-console/scrabengine.js (400 lines)
  Frontend controller with CRUD operations

INTEGRATION:
─────────────────────────────────────────────────────────────
Modified files:
- models/v2Company.js
  Added scrabEngine schema to aiAgentSettings

- services/engine/agent2/Agent2DiscoveryRunner.js
  Replaced scattered preprocessing with ScrabEngine
  Entry point: Line ~550

- services/engine/agent2/TriggerCardMatcher.js
  Enhanced to use expandedTokens from ScrabEngine
  Matches against both original + expanded tokens

- routes/agentConsole/agentConsole.js
  Registered scrabEngine router

- public/agent-console/index.html
  Added ScrabEngine navigation card

- public/agent-console/index.js
  Added scrabengine navigation handler

FEATURES:
──────────────────────────────────────────────────────

--- a/public/agent-console/index.html
+++ b/public/agent-console/index.html
@@ -137,6 +137,26 @@
           </div>
 
         <!-- ───────────────────────────────────────────────────────────
+             CARD: ScrabEngine — Text Processing
+             ─────────────────────────────────────────────────────────── -->
+          <div class="card nav-card" data-navigate="scrabengine">
+            <div class="nav-card-icon">
+              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 7h16M4 12h10M4 17h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                <path d="M17 15l3 3m0 0l-3 3m3-3h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <h3 class="nav-card-title">🔍 ScrabEngine</h3>
+            <p class="nav-card-description">Enterprise text processing pipeline. Fillers → Vocabulary → Synonyms. Clean STT transcripts and expand tokens for world-class trigger matching.</p>
+            <div class="nav-card-action">
+              Open
+              <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+
+        <!-- ───────────────────────────────────────────────────────────
              CARD: Agent 2.0 — Discovery
              ─────────────────────────────────────────────────────────── -->
           <div class="card nav-card" data-navigate="agent2">
